src/objects/ffc_statex__StatementAccountLine__c.object
<CustomObject>
    <fields>
        <fullName>ffc_statex__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Statement Account Lines</relationshipLabel>
        <relationshipName>StatementAccountLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffc_statex__DocumentOutstandingValue__c</fullName>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffc_statex__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffc_statex__StatementAccount__c</fullName>
        <label>Statement Account</label>
        <referenceTo>ffc_statex__StatementAccount__c</referenceTo>
        <relationshipLabel>Statement Account Lines</relationshipLabel>
        <relationshipName>StatementAccountLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffc_statex__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Statement Account Lines</relationshipLabel>
        <relationshipName>StatementAccountLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffc_statex__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Statement Account Lines</relationshipLabel>
        <relationshipName>StatementAccountLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Statement Account Line</label>
    <listViews>
        <fullName>ffc_statex__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STMAL-{00000000}</displayFormat>
        <label>Statement Account Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statement Account Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>